# BetterDesk

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.console  Dockerfile.hbbr  Dockerfile.hbbs  Dockerfile.server  LICENSE  MGMT_CLIENT_PROMPT.md  README.md  _deploy-to-qnap.sh  betterdesk-docker.sh  betterdesk.ps1  betterdesk.sh  docker-compose.qnap.yml  docker-compose.single.yml  docker-compose.yml  docker-entrypoint.sh  main.go
.github/: SECURITY_AUDIT_2026-03-01.md  copilot-instructions.md  go-server-context.md  labels.yml
.github/workflows/: docker-publish.yml
betterdesk-agent/: README.md  go.mod  go.sum  main.go
betterdesk-agent/agent/: agent.go  config.go  manifest.go  screenshot_unix.go
betterdesk-agent/install/: install.ps1  install.sh
betterdesk-mgmt/src-tauri/: Cargo.toml  tauri.conf.json
betterdesk-server/: .gitignore  DEPLOY.md  deploy.sh  go.mod  go.sum  main.go
betterdesk-server/admin/: server.go  server_test.go
betterdesk-server/api/: auth_handlers.go  branding_handlers.go  cdap_handlers.go  role_handlers.go  (+3 more)
bridges/: README.md
dev_modules/: check_hbbs_online.py  check_id.py  diagnose_pro_features.sh  patch_tcp_fix.py  patch_tcp_idchange.py  test_db_exports.js
docker/: entrypoint.sh  server-entrypoint.sh  supervisord.conf
docs/: AUDIT_2026-03-27.md  BETTERDESK_CLIENT_ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/betterdesk_cdap/: __init__.py  bridge.py
web-nodejs/: README.md  package.json  reset-password.js  server.js
(+266 files in other folders)
